crates/rargc/tests/snapshots/test_scripts__impl-188.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stdout] repeatable-arg.sh formats jpg --action upcase png --action downcase gif"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
format: jpg
  upcase JPG
  downcase jpg
format: png
  upcase PNG
  downcase png
format: gif
  upcase GIF
  downcase gif

