crates/rargc/tests/snapshots/test_scripts__impl-189.snap
---
source: crates/rargc/tests/test_scripts.rs
description: repeatable-flag.sh
expression: dst
---
#!/usr/bin/env bash
# This script was generated by rargc 0.0.0 (https://rargc.cloudbridge.uy)
# Modifying it manually is not recommended

if [[ "${BASH_VERSINFO:-0}" -lt 4 ]]; then
  printf "bash version 4 or higher is required\n" >&2
  exit 1
fi

if [[ -n "${DEBUG:-}" ]]; then
  set -x
fi
set -e


parse_root() {

  while [[ $# -gt 0 ]]; do
    key="$1"
    case "$key" in
      -v | --verbose)
        if [[ -z ${args['--verbose']+x} ]]; then
            args['--verbose']=1
          else
            args['--verbose']=$(("${args['--verbose']:-}" + 1))
          fi
        shift
        ;;
      -d | --data)
        if [[ -z ${args['data']+x} ]]; then
            args['data']="$2"
          else
            args['data']="${args['data']:-} $2"
          fi
        shift 2
        ;;
      -?*)
        printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Invalid option: " "$key" >&2
        exit 1
        ;;
      *)
        if [[ "$key" == "" ]]; then
          break
        fi
        printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Invalid argument: " "$key" >&2
        exit 1
        ;;
    esac
  done
}

root() {
  # Parse command arguments
  parse_root "$@"

  
  if [[ -z "${args['data']}" ]]; then
    printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Missing required option: " "data" >&2
    usage >&2
    exit 1
  fi
  # Convert the space delimited string to an array
  eval "data=(${args[data]})"
  echo "Data elements:"
  for i in "${data[@]}"; do
    echo "$i"
  done
  # The --verbose arg will contain the number of times it was used by the user
  verbose="${args[--verbose]}"
  echo ""
  echo "Verbosity level: $verbose"
  echo ""
  inspect_args
}


normalize_input() {
  local arg flags

  while [[ $# -gt 0 ]]; do
    arg="$1"
    if [[ $arg =~ ^(--[a-zA-Z0-9_\-]+)=(.+)$ ]]; then
      input+=("${BASH_REMATCH[1]}")
      input+=("${BASH_REMATCH[2]}")
    elif [[ $arg =~ ^(-[a-zA-Z0-9])=(.+)$ ]]; then
      input+=("${BASH_REMATCH[1]}")
      input+=("${BASH_REMATCH[2]}")
    elif [[ $arg =~ ^-([a-zA-Z0-9][a-zA-Z0-9]+)$ ]]; then
      flags="${BASH_REMATCH[1]}"
      for ((i = 0; i < ${#flags}; i++)); do
        input+=("-${flags:i:1}")
      done
    else
      input+=("$arg")
    fi

    shift
  done
}

inspect_args() {
  if ((${#args[@]})); then
    readarray -t sorted_keys < <(printf '%s\n' "${!args[@]}" | sort)
    echo args:
    for k in "${sorted_keys[@]}"; do echo "- \${args[$k]} = ${args[$k]}"; done
  else
    echo args: none
  fi

  if ((${#deps[@]})); then
    readarray -t sorted_keys < <(printf '%s\n' "${!deps[@]}" | sort)
    echo
    echo deps:
    for k in "${sorted_keys[@]}"; do echo "- \${deps[$k]} = ${deps[$k]}"; done
  fi

  if ((${#other_args[@]})); then
    echo
    echo other_args:
    echo "- \${other_args[*]} = ${other_args[*]}"
    for i in "${!other_args[@]}"; do
      echo "- \${other_args[$i]} = ${other_args[$i]}"
    done
  fi
}
version() {
  echo "0.0.1"
}
usage() {
  printf "Sample application to demonstrate the use of repeatable flags\n"
  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  repeatable-arg -d|--data <DATA> [OPTIONS]\n"
  printf "  repeatable-arg -h|--help\n"
  printf "  repeatable-arg --version\n"
  printf "\n\033[4m%s\033[0m\n" "Examples:"
  printf "  repeatable-arg -d 1 -d 2 -d 3\n"
  printf "    Multiple data values\n"
  printf "  repeatable-arg -d 1 -d 2 -d 3 -v\n"
  printf "    Multiple data values with verbosity enabled\n"
  printf "  repeatable-arg -d 1 -d 2 -d 3 -vvv\n"
  printf "    Multiple data values with high verbosity enabled\n"

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -d --data <DATA>\n"
  printf "    Provide data values\n"
  printf "    [@multiple]\n"
  printf "  -v --verbose\n"
  printf "    Set verbosity level\n"printf "    [@multiple]"
  printf "  -h --help\n"
  printf "    Print help\n"
  printf "  --version\n"
  printf "    Pring version\n"
}

parse_arguments() {
  while [[ $# -gt 0 ]]; do
    case "${1:-}" in
      --version)
        version
        exit
        ;;
      -h|--help)
        usage
        exit
        ;;
      *)
        break
        ;;
    esac
  done
  action="${1:-}"

  case $action in
    -h|--help)
      usage
      exit
      ;;
    "")
      action="root"
      ;;
    *)
      action="root"
      ;;
  esac
}

run() {
  declare -A args=()
  declare -A deps=()
  declare -a input=()
  normalize_input "$@"
  parse_arguments "${input[@]}"
  root "${input[@]}"
}

run "$@"

