crates/rargc/tests/snapshots/test_scripts__impl-192.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stdout] repeatable-flag.sh -d 1 -d 2 -d3"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Data elements:
1
2
-3

Verbosity level: 


args:
- rargs_data = ([0] = "1"
- [1] = "2"
- [2] = "-3")

